--- a/files/templates/jenkins.yml
+++ b/files/templates/jenkins.yml
@@ -178,7 +178,7 @@ parameters:
 - description: The name of the OpenShift Service exposed for the Jenkins container.
   displayName: Jenkins Service Name
   name: JENKINS_SERVICE_NAME
-  value: jenkins
+  value: jenkins-cc
 - description: The name of the service used for master/slave communication.
   displayName: Jenkins JNLP Service Name
   name: JNLP_SERVICE_NAME
