--- a/files/templates/companyxyz-fe-deploy.yml
+++ b/files/templates/companyxyz-fe-deploy.yml
@@ -2,7 +2,7 @@
 kind: Template
 apiVersion: v1
 metadata:
-  name: cc-fe-deploy
+  name: companyxyz-fe-deploy
   annotations:
     openshift.io/display-name: Static react js App Deploy Template
     description: A template to deploy your an App with a HTTP endpoint
@@ -127,4 +127,4 @@ parameters:
   description: The project/namespace where the Jenkins executing pipelines is deployed.
   required: true
 labels:
-  template: cc-fe-deploy-template
+  template: companyxyz-fe-deploy-template
