--- a/projects/companyxyz-dev.yml
+++ b/projects/companyxyz-dev.yml
@@ -5,5 +5,5 @@ items:
 - kind: ProjectRequest
   apiVersion: v1
   metadata:
-    name: companyxyz-dev
+    name: labs-dev
   displayName: companyxyz Development Workspace
