--- a/templates/jenkins.yml
+++ b/templates/jenkins.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Template
 labels:
   template: jenkins-persistent-template
+  app: jenkins
 message: A Jenkins service has been created in your project.  Log into Jenkins with
   your OpenShift account.  The tutorial at https://github.com/openshift/origin/blob/master/examples/jenkins/README.md
   contains more information about using this template.
@@ -178,7 +179,7 @@ parameters:
 - description: The name of the OpenShift Service exposed for the Jenkins container.
   displayName: Jenkins Service Name
   name: JENKINS_SERVICE_NAME
-  value: jenkins-companyxyz
+  value: jenkins
 - description: The name of the service used for master/slave communication.
   displayName: Jenkins JNLP Service Name
   name: JNLP_SERVICE_NAME
