--- a/templates/nexus.yml
+++ b/templates/nexus.yml
@@ -51,15 +51,7 @@ objects:
     selector:
       name: "${NAME}"
     strategy:
-      activeDeadlineSeconds: 21600
-      resources: {}
-      rollingParams:
-        intervalSeconds: 1
-        maxSurge: 25%
-        maxUnavailable: 25%
-        timeoutSeconds: 600
-        updatePeriodSeconds: 1
-      type: Rolling
+      type: Recreate
     template:
       metadata:
         creationTimestamp:
@@ -78,7 +70,7 @@ objects:
               memory: "${MEMORY_LIMIT}"
           terminationMessagePath: "/dev/termination-log"
           volumeMounts:
-          - mountPath: "/nexus-data"
+          - mountPath: "/sonatype-work"
             name: "${NAME}"
         dnsPolicy: ClusterFirst
         restartPolicy: Always
